feat and fix: deleting tests that wasnt running - created MockAcquirerClient to serve as a mock for MercadoPagoClient - configuring the mock profile - pom.xml problems with duplicate dependency fixed - new version of StateTransitionValidator for compatibility